--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 </head>
 <body>
-    <h2>Hello changes made by main</h2>
+    <h2>Hello changes made by fucntion2</h2>
     <h1>Main branch</h1>
     <h2>bye</h2>
     <h4>hello</h4>
